Advanced Training/3.network-policies-advanced/lab_manifests/3.4-globaldefaultdeny.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-deny
spec:
  types:
  - Ingress
  - Egress
